--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>James Yardley</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
         <a class="navbar-brand" href="index.html">James Yardley</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -28,5 +28,43 @@
           </ul>
         </div>
       </nav>
+
+      <div class="container">
+      <div class="row" style="margin-top: 80px;"></div>
+      <div class="row">
+      <div class="col-md-8 bg-light">
+
+        <div class="row">
+          <div class="col-md-12">
+            <h1>Contact</h1>
+          </div>
+        </div>
+    
+        <div class="row">
+          <div class="col-md-12">
+          
+          <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Name</label>
+                <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
+              </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message"></textarea>
+              </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+
+          </div>
+        </div>
+
+      </div>
+      </div>
+
+      </div>
 </body>
 </html>
