--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,10 @@
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
-            
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">About</a>
+              <a class="nav-link" href="index.html">About</a>
             </li>
+
           </ul>
         </div>
       </nav>
