--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
   
         </div>
 
+        
+        <footer id="sticky-footer" class="py-4 bg-light text-black-50" style="position:absolute; bottom: 0; width: 100%;">
+          <div class="container text-center">
+            <small>Copyright &copy; James Yardley</small>
+          </div>
+        </footer>
 
 
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
