--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
       
           <div class="row">
             <div class="col-md-12">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            <img src="Assets/profile.png" style="width: 30%;" alt="James Yardley">
+            <p>James Yardley is a software developer from Charlotte, North Carolina. In previous lives he was a freelance musician, guitar teacher, and accountant. He enjoys problem solving, eating Bojangles, and watching the NBA.</p>
+            <a href="https://www.linkedin.com/in/james-yardley-b02a7712b/" target="_blank">LinkedIn</a>
+            <a href="http://github.com/jmyardley" target="_blank">Github</a>
 
   
             </div>
