--- a/portfolio.html
+++ b/portfolio.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>James Yardley</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">James Yardley</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">About</a>
-            </li>  
-          </ul>
-        </div>
-    </nav>
 
-    <div class="container">
-      <div class="row" style="margin-top: 80px;"></div>
-      <div class="row">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <title>James Yardley</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">James Yardley</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">About</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="row" style="margin-top: 80px;"></div>
+    <div class="row">
       <div class="col-md-9 bg-light">
 
         <div class="row">
@@ -39,30 +43,66 @@
             <h1>Portfolio</h1>
           </div>
         </div>
-    
+
         <div class="row">
           <div class="col-md-12">
-          <img src="https://via.placeholder.com/350x350" style="padding: 10px;" alt="350x350">
-          <img src="https://via.placeholder.com/350x350" style="padding: 10px;" alt="350x350">
-          <img src="https://via.placeholder.com/350x350" style="padding: 10px;" alt="350x350">
-          <img src="https://via.placeholder.com/350x350" style="padding: 10px;" alt="350x350">
-          <img src="https://via.placeholder.com/350x350" style="padding: 10px;" alt="350x350">
+            <img src="./assets/travel.png" style="width: 350px; height: 350px; padding: 10px;" alt="Getaway">
+            <ul>
+              <li>
+                <a href="https://wmdane.github.io/getaway_planner/">Getaway Planner</a>
+              </li>
+              <li>
+                <a href="https://github.com/wmdane/getaway_planner">Github Repository</a>
+              </li>
+            </ul>
+          </div>
+        </div>
 
+        <div class="row">
+          <div class="col-md-12">
+            <img src="./assets/daily.png" style="width: 350px; height: 350px; padding: 10px;" alt="Password">
+            <ul>
+              <li>
+                <a href="https://jmyardley.github.io/password-generator/">Secure Password Generator</a>
+              </li>
+              <li>
+                <a href="https://github.com/jmyardley/password-generator">Github Repository</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12">
+            <img src="./assets/calendar.png" style="width: 350px; height: 350px; padding: 10px;" alt="Password">
+            <ul>
+              <li>
+                <a href="https://jmyardley.github.io/daily-planner/">Daily Planner</a>
+              </li>
+              <li>
+                <a href="https://github.com/jmyardley/daily-planner">Github Repository</a>
+              </li>
+            </ul>
           </div>
         </div>
 
       </div>
-      </div>
+    </div>
 
-      </div>
+  </div>
 
-      <footer id="sticky-footer" class="py-4 bg-light text-black-50">
-        <div class="container text-center">
-          <small>Copyright &copy; James Yardley</small>
-        </div>
-      </footer>
+  <footer id="sticky-footer" class="py-4 bg-light text-black-50">
+    <div class="container text-center">
+      <small>Copyright &copy; James Yardley</small>
+    </div>
+  </footer>
 
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
