--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
               <li>
                 <a href="http://github.com/jmyardley" target="_blank">Github</a>
               </li>
+              <li>
+                <a href="http://github.com/jmyardley" target="_blank">Resume</a>
+              </li>
             </ul>
 
 
