--- a/index0.html
+++ b/index0.html
@@ -23,66 +23,49 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="index.html">About</a>
         </li>
       </ul>
     </div>
   </nav>
 
+
   <div class="container">
     <div class="row" style="margin-top: 80px;"></div>
     <div class="row">
-      <div class="col-md-9 bg-light">
+      <div class="col-md-8 bg-light">
 
         <div class="row">
           <div class="col-md-12">
-            <h1>Portfolio</h1>
+            <h1>About Me</h1>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-12">
-            <img src="./assets/travel.png" style="width: 350px; height: 350px; padding: 10px;" alt="Getaway">
+            <img src="Assets/profile.png" style="width: 30%;" alt="James Yardley">
+            <p>James Yardley is a software developer from Charlotte, North Carolina. In previous lives he was a
+              freelance musician, guitar teacher, and accountant. He enjoys problem solving, eating Bojangles, and
+              watching the NBA. </p>
+            <p>
+              He can be reached via email at jmyardley@gmail.com or via phone at 704-999-3901.</p>
             <ul>
               <li>
-                <a href="https://wmdane.github.io/getaway_planner/">Getaway Planner</a>
+                <a href="https://www.linkedin.com/in/james-yardley-b02a7712b/" target="_blank">LinkedIn</a>
               </li>
               <li>
-                <a href="https://github.com/wmdane/getaway_planner">Github Repository</a>
+                <a href="http://github.com/jmyardley" target="_blank">Github</a>
+              </li>
+              <li>
+                <a href="http://github.com/jmyardley" target="_blank">Resume</a>
               </li>
             </ul>
-          </div>
-        </div>
 
-        <div class="row">
-          <div class="col-md-12">
-            <img src="./assets/password.png" style="width: 350px; height: 350px; padding: 10px;" alt="Password">
-            <ul>
-              <li>
-                <a href="https://jmyardley.github.io/password-generator/">Secure Password Generator</a>
-              </li>
-              <li>
-                <a href="https://github.com/jmyardley/password-generator">Github Repository</a>
-              </li>
-            </ul>
-          </div>
-        </div>
 
-        <div class="row">
-          <div class="col-md-12">
-            <img src="./assets/calendar.png" style="width: 350px; height: 350px; padding: 10px;" alt="Password">
-            <ul>
-              <li>
-                <a href="https://jmyardley.github.io/daily-planner/">Daily Planner</a>
-              </li>
-              <li>
-                <a href="https://github.com/jmyardley/daily-planner">Github Repository</a>
-              </li>
-            </ul>
           </div>
         </div>
 
@@ -91,11 +74,13 @@
 
   </div>
 
-  <footer id="sticky-footer" class="py-4 bg-light text-black-50">
+
+  <footer id="sticky-footer" class="py-4 bg-light text-black-50" style="position:absolute; bottom: 0; width: 100%;">
     <div class="container text-center">
       <small>Copyright &copy; James Yardley</small>
     </div>
   </footer>
+
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
