--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <div class="row">
                 <div class="four columns">
-                    <img src="Assets/profile.png" alt="Photo" width="100%">
+                    <img src="Assets/jordan.png" alt="Photo" width="100%">
                 </div>
 
                 <div class="eight columns">
