--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="index.html">About</a>&nbsp;&nbsp;
                         <!-- <a href="https://jmyardley.github.io/blog.html">Blog</a>&nbsp;&nbsp; -->
                         <a href="projects.html">Projects</a>&nbsp;&nbsp;
-                        <!-- <a href="Assets/cv.pdf">CV</a> -->
+                        <a href="Assets/resume.pdf" target="_blank">Resume</a>
                     </div>
                     <div class="social-icons">
                         <a href="https://github.com/jmyardley"><i class="fa fa-github" aria-hidden="true"
